Updated UI, improved API integration, added ProfileCard & Challenges page

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VITE_BACKEND_URL=http://localhost:3000
+VITE_API_URL=http://localhost:3000
+MONGODB_URI=mongodb://localhost:27017/testApp
+PORT=5000
+JWT_SECRET=your-secret-key
