--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
+    "mongoose": "^8.12.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
@@ -28,6 +29,8 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/axios": "^0.9.36",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^19.0.4",
