--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VITE_API_URL=http://localhost:3000
 MONGODB_URI=mongodb://localhost:27017/testApp
 PORT=5000
 JWT_SECRET=your-secret-key
+VITE_GOOGLE_CLIENT_ID=581715281390-abcxyz1234567890.apps.googleusercontent.com
+VITE_GOOGLE_CLIENT_SECRET=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
