Fix editing posts with photo

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ PORT=5000
 JWT_SECRET=your-secret-key
 GOOGLE_CLIENT_ID = 85174330842-u1lk5r0slht3m33u091l1bvfmchjh3np.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
+
+VITE_SERVER_URL=http://localhost:3000
