--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ VITE_API_URL=http://localhost:3000
 MONGODB_URI=mongodb://localhost:27017/testApp
 PORT=5000
 JWT_SECRET=your-secret-key
-GOOGLE_CLIENT_ID = 85174330842-u1lk5r0slht3m33u091l1bvfmchjh3np.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
+VITE_GOOGLE_CLIENT_ID=85174330842-u1lk5r0slht3m33u091l1bvfmchjh3np.apps.googleusercontent.com
+VITE_GOOGLE_CLIENT_SECRET=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
 
 VITE_SERVER_URL=http://localhost:3000
