--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^19.0.4",
     "@types/react-fontawesome": "^1.6.8",
+    "@types/socket.io-client": "^1.4.36",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
